4484.	[bug]		Failure to find readline when requested should be
			fatal to configure. [RT #43328]

4483.	[func]		Check prefixes in acls to make sure the address and
			prefix lengths are consistent.  Warn only in
			BIND 9.11 and earlier. [RT #43367]

4482.	[bug]		Address use before require check and remove extraneous
			dns_message_gettsigkey call in dns_tsig_sign.
			[RT #43374]

4482.	[cleanup]	Change #4455 was incomplete. [RT #43252]

4481.	[func]		dig: make +class, +crypto, +multiline, +rrcomments,
			+onesoa, +qr, +ttlid, +ttlunits and -u per lookup
			rather than global. [RT #42450]

4480.	[placeholder]

4479.	[placeholder]

4478.	[func]		Add +continue option to mdig, allow continue on socket
			errors. [RT #43281]

4477.	[test]		Fix mkeys test timing issues. [RT #41028]

4476.	[test]		Fix reclimit test on slower machines. [RT #43283]

4475.	[doc]		Update named-checkconf documentation. [RT #43153]

4474.	[bug]		win32: call WSAStartup in fromtext_in_wks so that
			getprotobyname and getservbyname work.  [RT #43197]

4473.	[bug]		Only call fsync / _commit on regular files. [RT #43196]

4472.	[bug]		Named could fail to find the correct NSEC3 records when
			a zone was updated between looking for the answer and
			looking for the NSEC3 records proving nonexistence
			of the answer. [RT #43247]

	--- 9.11.0 released ---

	--- 9.11.0rc3 released ---

4471.	[cleanup]	Render client/query logging format consistent for
			ease of log file parsing. (Note that this affects
			"querylog" format: there is now an additional field
			indicating the client object address.) [RT #43238]

4470.	[bug]		Reset message with intent parse before
			calling dns_dispatch_getnext. [RT #43229]

4469.	[placeholder]

	--- 9.11.0rc2 released ---

4468.	[bug]		Address ECS option handling issues. [RT #43191]

4467.	[security]	It was possible to trigger an assertion when
			rendering a message. (CVE-2016-2776) [RT #43139]

4466.	[bug]		Interface scanning didn't work on a Windows system