@@ -1,3 +1,6 @@
+4485.	[bug]		Look in $prefix/lib/pythonX.Y/site-packages for
+			the python modules we install. [RT #43330]
+
 4484.	[bug]		Failure to find readline when requested should be
 			fatal to configure. [RT #43328]
 
